# console_engine

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  UPGRADE_1.0.md  UPGRADE_2.0.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
examples/: drag-and-drop.rs  emojis.rs  events.rs  form-choices.rs  form-input.rs  form-simple.rs  form-text.rs  form-validation.rs  graph.rs  lines-fps.rs  lines.rs  mouse.rs  screen-embed.rs  screen-extract.rs  screen-simple.rs  screen-swap.rs  scroll-smooth.rs  scroll.rs  shapes.rs  snake.rs  styled-rect.rs  tetris.rs
src/: events.rs  lib.rs  pixel.rs  rect_style.rs  screen.rs  utils.rs
src/compatibility/: drawille.rs  mod.rs
src/form/: input.rs  mod.rs
src/forms/: button.rs  choices.rs  constraints.rs  form.rs  input.rs  mod.rs  text.rs
src/forms/constraints/: basic.rs  complex.rs  logic.rs  mod.rs  numbers.rs  string.rs
