[package]
authors = ["Vincent Foulon <sup.vfoulon@gmail.com>"]
description = "A simple terminal framework to draw things and manage user input"
edition = "2018"
keywords = ["terminal", "tui", "input"]
license = "MIT"
name = "console_engine"
readme = "README.md"
repository = "https://github.com/VincentFoulon80/console_engine"
version = "2.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21"
unicode-width = "0.1.8"

[dev-dependencies]
console_engine = {path = ".", features = ["event"]}
rand = "0.8"

[features]
default = []
event = []
