[package]
authors = ["Vincent Foulon <sup.vfoulon@gmail.com>"]
categories = ["command-line-interface"]
description = "A simple terminal framework to draw things and manage user input"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["terminal", "tui", "input"]
license = "MIT"
name = "console_engine"
readme = "README.md"
repository = "https://github.com/VincentFoulon80/console_engine"
version = "2.6.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
crossterm = "0.26.1"
unicode-width = "0.1.8"

[dev-dependencies]
console_engine = {path = ".", features = ["event", "form"]}
rand = "0.8"

[features]
default = []
event = []
form = ["event"]
